// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it works with defaults 1`] = `
.c0 {
  font-size: 1rem;
  font-weight: 400;
  font-family: Roboto,sans-serif;
  line-height: 2;
  color: #292B3E;
}

<div
  class="c0"
>
  <p>
    Hello world!
  </p>
</div>
`;

exports[`it works with styles 1`] = `
.c0 {
  font-size: 1rem;
  font-weight: 400;
  font-family: Roboto,sans-serif;
  line-height: 2;
  width: 50%;
  color: #292B3E;
}

<div
  class="c0"
>
  <p>
    Hello world!
  </p>
</div>
`;
